--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://app.enzuzo.com/scripts/cookiebar/fd6b23e2-8668-11f0-9530-379c1d5a0f18"></script>
     <meta http-equiv="refresh" content="0; url=https://tommystanton-cole.github.io/BinaryActivities/">
     <title>Redirecting...</title>
   </head>
